k8s/webflux-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webflux-service
spec:
  type: ClusterIP
  selector:
    app: webflux
  ports:
  - name: netty
    port: 8080
    targetPort: 8080
  - name: pushgateway
    port: 9091
    targetPort: 9091

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webflux-deployment
spec:
  selector:
    matchLabels:
      app: webflux
  template:
    metadata:
      labels:
        app: webflux
    spec:
      containers:
      - name: spring-boot
        image: localhost:32000/kwonghung/springboot3-webflux
        resources:
          requests:
            memory: "32Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - name: http
          containerPort: 8080
        volumeMounts:
          # the path /app/resources is created by jib 
          - mountPath: /app/resources/certs
            name: selfsigned-jks
      volumes:
      - name: selfsigned-jks
        secret:
          secretName: selfsigned-secret
