k8s/ingress-config.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: url-rewrite
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /webflux(/|$)(.*)
            pathType: Prefix
            backend:
              service: 
                name: webflux-service
                port: 
                  number: 8080
          - path: /prometheus(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: prometheus-service
                port:
                  number: 9090
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: straight-through
spec:
  ingressClassName: nginx
  tls:
    - secretName: selfsigned-secret
  rules:
    - http:
        paths:
          - path: /grafana/
            pathType: Prefix
            backend:
              service:
                name: grafana-service
                port:
                  number: 3000
